--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 h1{
     color:red;
+    margin-left:30px;
 }
 .header{
     background-color:#9cc7d6;
@@ -28,4 +29,33 @@ body{
 }
 img{
     box-shadow: 8px 8px black;
+}
+a:link{
+    color: #000000;
+}
+a:visited{
+    color: #000000;
+}
+.menu{
+    margin-right: 30px;
+    padding:30px;
+}
+.menu a{
+    margin-left: 10px;
+}
+.item{
+    position: relative;
+}
+.item p{
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    opacity:0;
+}
+.item:hover p{
+    opacity: 1;
+}
+.item:hover img{
+    opacity: .33;
 }
